--- a/config/application.properties
+++ b/config/application.properties
@@ -1,4 +1,4 @@
-server.port=8089
+server.port=6000
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
@@ -8,5 +8,14 @@ spring.datasource.password=Nel62*com
 
 hotels-url=http://localhost:9092/hotel
 hotels-ContactPerson=http://localhost:9092/contactPerson
+rokel-LastTransaction=https://www.rokelsl.com/ebank/oecgi3.exe/v1/GetLastTransactionDetails
+rokel-balanceEnquiry=https://www.rokelsl.com/ebank/oecgi3.exe/v1/GetAccountBalance
+rokel-getAccountDetails=https://www.rokelsl.com/ebank/oecgi3.exe/v1/GetCustomerDetails
+rokel-transfer=https://www.rokelsl.com/ebank/oecgi3.exe/v1/Transfer
+rokel-ministatement=https://www.rokelsl.com/ebank/oecgi3.exe/v1/GetLastAccountStatement
+rokel-apikey=AB726A08000032790000418B9E1CCBA9897F4E00
 
 spring.banner.location=banner.txt
+
+switch-port=2005
+switch-ip=127.0.0.1
